--- a/resource.qrc
+++ b/resource.qrc
@@ -46,46 +46,46 @@
         <file>切图-首页/页面变小.png</file>
         <file>切图-首页/顶部.png</file>
         <file>theme/icon/LOGO.png</file>
-        <file>theme/icon/下底.png</file>
-        <file>theme/icon/下拉.png</file>
-        <file>theme/icon/产品图.png</file>
-        <file>theme/icon/刷新.png</file>
-        <file>theme/icon/单个采集.png</file>
-        <file>theme/icon/右边底.png</file>
-        <file>theme/icon/图像处理.png</file>
-        <file>theme/icon/导入.png</file>
-        <file>theme/icon/导出.png</file>
-        <file>theme/icon/小箭头.png</file>
-        <file>theme/icon/展开.png</file>
-        <file>theme/icon/属性树.png</file>
-        <file>theme/icon/左边底.png</file>
-        <file>theme/icon/布局.png</file>
-        <file>theme/icon/常用属性.png</file>
+        <file>theme/icon/bottom-side.png</file>
+        <file>theme/icon/down-list.png</file>
+        <file>theme/icon/index.png</file>
+        <file>theme/icon/refresh.png</file>
+        <file>theme/icon/add.png</file>
+        <file>theme/icon/right-side.png</file>
+        <file>theme/icon/image.png</file>
+        <file>theme/icon/download.png</file>
+        <file>theme/icon/upload.png</file>
+        <file>theme/icon/collect.png</file>
+        <file>theme/icon/expand.png</file>
+        <file>theme/icon/property.png</file>
+        <file>theme/icon/left-side.png</file>
+        <file>theme/icon/laout.png</file>
+        <file>theme/icon/info.png</file>
         <file>theme/icon/camera.png</file>
-        <file>theme/icon/扩大.png</file>
-        <file>theme/icon/批量暂停.png</file>
-        <file>theme/icon/批量采集.png</file>
-        <file>theme/icon/抓拍.png</file>
-        <file>theme/icon/搜索.png</file>
-        <file>theme/icon/播放.png</file>
-        <file>theme/icon/文件夹1.png</file>
-        <file>theme/icon/暂停.png</file>
-        <file>theme/icon/曝光.png</file>
-        <file>theme/icon/最大化.png</file>
-        <file>theme/icon/白平衡.png</file>
-        <file>theme/icon/相机.png</file>
-        <file>theme/icon/相机拷贝2.png</file>
-        <file>theme/icon/箭头拷贝2.png</file>
+        <file>theme/icon/zoom-in.png</file>
+        <file>theme/icon/1.png</file>
+        <file>theme/icon/2.png</file>
+        <file>theme/icon/snapshot.png</file>
+        <file>theme/icon/search.png</file>
+        <file>theme/icon/pause.png</file>
+        <file>theme/icon/dir.png</file>
+        <file>theme/icon/play.png</file>
+        <file>theme/icon/exposure.png</file>
+        <file>theme/icon/3.png</file>
+        <file>theme/icon/wb.png</file>
+        <file>theme/icon/camera-background.png</file>
+        <file>theme/icon/10.png</file>
+        <file>theme/icon/12.png</file>
         <file>theme/icon/stopped.png</file>
-        <file>theme/icon/红色.png</file>
+        <file>theme/icon/8.png</file>
         <file>theme/icon/playing.png</file>
-        <file>theme/icon/绿色.png</file>
-        <file>theme/icon/缩小.png</file>
-        <file>theme/icon/缩进.png</file>
-        <file>theme/icon/触发控制.png</file>
-        <file>theme/icon/返回.png</file>
-        <file>theme/icon/链接.png</file>
-        <file>theme/icon/顶部.png</file>
+        <file>theme/icon/9.png</file>
+        <file>theme/icon/zoom-out.png</file>
+        <file>theme/icon/6.png</file>
+        <file>theme/icon/trigger.png</file>
+        <file>theme/icon/5.png</file>
+        <file>theme/icon/4.png</file>
+        <file>theme/icon/top-side.png</file>
         <file>theme/icon/close.png</file>
         <file>theme/icon/language-zh.png</file>
         <file>theme/icon/language-en.png</file>
