--- a/snapshotdialog.ui
+++ b/snapshotdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>263</height>
+    <width>402</width>
+    <height>195</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,12 +19,16 @@
      <item>
       <widget class="QLabel" name="label_22">
        <property name="text">
-        <string>resolutions：</string>
+        <string>Resolutions：</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox_resolution"/>
+      <widget class="QComboBox" name="comboBox_resolution">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -33,7 +37,7 @@
      <item>
       <widget class="QLabel" name="label_19">
        <property name="text">
-        <string>save dir：</string>
+        <string>Save Dir：</string>
        </property>
       </widget>
      </item>
@@ -58,7 +62,7 @@
      <item>
       <widget class="QLabel" name="label_20">
        <property name="text">
-        <string>format：</string>
+        <string>Format：</string>
        </property>
       </widget>
      </item>
@@ -94,7 +98,7 @@
       <bool>true</bool>
      </property>
      <property name="text">
-      <string>continuous</string>
+      <string>Continuous</string>
      </property>
     </widget>
    </item>
@@ -103,7 +107,7 @@
      <item>
       <widget class="QLabel" name="label_21">
        <property name="text">
-        <string>perios(ms)：</string>
+        <string>Perios(ms)：</string>
        </property>
       </widget>
      </item>
